<resources>
    <string name="app_name">Business Way</string>
    <string name="action_settings">Settings</string>
    <string name="label_like">Like</string>
    <string name="label_comment">Comment</string>
    <string name="label_share">Share</string>
    <string name="label_search">Search</string>
    <string name="label_welcome_to_business_way">Welcome to Business Way</string>
    <string name="label_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_log_in_with">Log in with</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forget_password">Forget Password?</string>
    <string name="label_reset">Reset</string>
    <string name="label_or">Or</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_i_accept_business_way">I accept Business Way</string>
    <string name="label_terms_and_conditions">terms and conditions</string>
    <string name="label_register">Register</string>
    <string name="label_sign_up">Sign up</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_check_connection">Please check connection and try again later</string>
    <string name="msg_check_server">Couldn\'t reach server now, please try again later</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_retry">Retry</string>
    <string name="msg_please_enter">Please enter</string>
    <string name="msg_enter_valid_email">Please, enter valid email</string>
    <string name="msg_enter_valid_phone">Please, enter valid phone</string>
    <string name="msg_enter_valid_password">Passwords do not match</string>
    <string name="label_complete_profile">Complete Profile</string>
    <string name="label_finish">Finish</string>
    <string name="label_forgot_your_password">Forgot your password?</string>
    <string name="msg_forgot_password">We can help you reset your password.\nFirst, Enter your email address</string>
    <string name="label_send">Send</string>
    <string name="msg_should_accept_terms">Please, accept terms and conditions</string>
    <string name="lable_all_news">All News</string>
    <string name="lable_recents">Recent</string>
    <string name="label_position">Position</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_gender">Gender</string>
    <string name="label_country">Country</string>
    <string name="label_city">City</string>
    <string name="label_district">District</string>
    <string name="label_change_image">Change image</string>
    <string name="label_crop">Crop</string>

</resources>
