<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/dialog_main_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.theartofdev.edmodo.cropper.CropImageView
                android:id="@+id/select_image_cropImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:scaleType="fitCenter" />
            <!--android:adjustViewBounds="true"-->
            <ImageView
                android:id="@+id/select_image_logo_imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/select_image_change_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_rectc_border_red"
                    android:text="@string/label_change_image"
                    android:textColor="@color/colorRed"
                    android:textAllCaps="false"
                    android:layout_weight="5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/select_image_crop_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_rectc_border_red"
                    android:text="@string/label_crop"
                    android:textColor="@color/colorRed"
                    android:textAllCaps="false"
                    android:layout_weight="5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <Button
                android:id="@+id/select_image_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_rectc_border_red"
                android:textColor="@color/colorRed"
                android:text="@string/label_ok" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>